--- a/readme.me
+++ b/readme.me
@@ -1,2 +1,11 @@
-Test GIT
-test
+git restore <file> => remove file from unstaged
+git rm <file> => remove file
+git rm -r <folder> => remove folder
+git reset --soft HEAD~<commit number> => undo commit without losing changes
+git reset --hard HEAD~<commit number> => undo commit losing changes
+git reflog => changes log
+git log => commit log
+git revert <commit_id> => undo commit remote repo
+git reset <log_id> => undo change depends on log_id
+git merge => merge two branch into one 
+git rebase => merge two branch into one and create new commit
